[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Textures/ladybug.png" type="Texture" id=1]
[ext_resource path="res://Assets/scenes/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/scenes/LivingObject.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 7 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 14.5, 4 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Aphid" groups=["enemy"] instance=ExtResource( 3 )]
script = ExtResource( 2 )
tile_move_distance = 3

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 7 )
shape = SubResource( 1 )
disabled = true

[node name="Hitbox" type="Area2D" parent="." index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, -4 )
shape = SubResource( 11 )

[node name="AnimatedSprite" parent="." index="3"]
scale = Vector2( 1, 1 )
frames = SubResource( 20 )
frame = 2
playing = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="4"]
position = Vector2( 1, -4 )
shape = SubResource( 11 )
disabled = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
